# lyt-assistant

./: .gitignore  CHANGELOG.md  HANDOFF.md  INSTALL.md  LICENSE  README.md  SESSION_RESTORE.md  TESTING.md  package-lock.json  package.json  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
docs/superpowers/plans/: 2026-04-13-obsidian-cli-migration.md
docs/superpowers/specs/: 2026-04-13-obsidian-cli-migration-design.md  (+3 more)
examples/: classify-inbox-output.md  moc-health-report.md
hooks/: hooks.json
lib/: agents-schema.md  analysis.md  content-analyzer.md  deep-research.md  frontmatter.md  link-parser.md  moc-matcher.md  obsidian-operations.md  vault-scanner.md
scripts/: compile-meetings.py  compile.py  config.py  flush.py  lint.py  pre-compact.py  query.py  session-end.py  session-start.py  utils.py
skills/archive-project/: SKILL.md
skills/check-moc-health/: SKILL.md
skills/classify-inbox/: SKILL.md
skills/compile/: SKILL.md
skills/create-note/: SKILL.md
skills/create-project/: SKILL.md
skills/discover-links/: SKILL.md
skills/end-of-day/: SKILL.md
skills/ingest/: SKILL.md
skills/internal-channel-learnings/: SKILL.md
skills/lint/: SKILL.md
skills/meeting-action-items/: SKILL.md  meeting_action_items.py  test_meeting_action_items.py
skills/meeting-ingest/: SKILL.md
skills/one-pager/: SKILL.md
skills/query/: SKILL.md
skills/research/: SKILL.md
skills/review-structure/: SKILL.md
skills/start-of-day/: SKILL.md
skills/support-learnings/: SKILL.md  fes_support_cache.py  test_fes_support_cache.py
(+8 files in other folders)
