[project]
name = "lyt-assistant"
version = "2.0.0"
description = "Karpathy-style LLM wiki system — automated capture, compilation, and knowledge management for Obsidian"
requires-python = ">=3.12"
dependencies = [
    "claude-agent-sdk>=0.1.29",
    "python-dotenv>=1.0.0",
    "tzdata>=2024.1",
]

[tool.ruff]
line-length = 100
